Заставил работать рекурсиную загрузку файловой структуры

--- a/TreeSize.App/TreeSize.App/MainWindow.xaml
+++ b/TreeSize.App/TreeSize.App/MainWindow.xaml
@@ -58,7 +58,9 @@
             </TreeView.ItemContainerStyle>
             <TreeView.ItemTemplate>
                 <HierarchicalDataTemplate ItemsSource="{Binding Content}">
-                    <TextBlock Text="{Binding Name}"/>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding Name}" />
+                    </StackPanel>
                 </HierarchicalDataTemplate>
             </TreeView.ItemTemplate>
         </TreeView>
